Added tests to check custom fallback actions